# infrastructure/restapi/controllers/user/mappers.go
@@ -23,6 +23,6 @@ func arrayDomainToResponseMapper(usersDomain *[]userDomain.User) *[]ResponseUser
 }
 
 func toUsecaseMapper(user *NewUserRequest) userUseCase.NewUser {
-	return userUseCase.NewUser{UserName: user.UserName, Password: user.Password, Email: user.Email, FirstName: user.FirstName, LastName: user.LastName, RoleID: user.RoleID}
+	return userUseCase.NewUser{UserName: user.UserName, Password: user.Password, Email: user.Email, FirstName: user.FirstName, LastName: user.LastName}
 
 }
