# infrastructure/restapi/controllers/user/requests.go
@@ -12,5 +12,4 @@ type NewUserRequest struct {
 	FirstName string `json:"firstName" example:"John" binding:"required"`
 	LastName  string `json:"lastName" example:"Doe" binding:"required"`
 	Password  string `json:"password" example:"Password123" binding:"required"`
-	RoleID    string `json:"role_id" example:"admin" binding:"required"`
 }
